--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
+title: 欢迎来到我的地盘
+subtitle: '一个菜鸟程序员的技术分享'
 description: ''
 keywords:
-author: Fang
+author: 方承维
 language: zh-CN
 timezone: ''
 
